[tool.poetry]
name = "hexlet-code"
version = "0.1.2"
description = ""
authors = ["Stroikin Evgeni <evgenistroikin>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
colorama = "^0.4.5"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
ipython = "^8.4.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"